--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -35,6 +35,7 @@
   --fourth-color: #ff3333;
   --inline-color: rgba(0, 0, 0, 0.10);
   --fiveth-color: rgba(0, 0, 0, 0.60);
+  --btn-primary: #e7e7e7;
 }
 
 
@@ -225,7 +226,13 @@ p {
   position: absolute;
   top: 507px;
   background-color: var(--primary-color);
-  color: var(--text-color)
+  color: var(--text-color);
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background-color: var(--btn-primary);
+  color: var(--primary-color);
 }
 
 .tbl {
@@ -386,6 +393,12 @@ p {
   margin-left: 510px;
   margin-right: 510px;
   font-size: 16px;
+  cursor: pointer;
+}
+
+.btn-secondary:hover {
+  background-color: var(--btn-primary);
+  color: var(--primary-color);
 }
 
 
@@ -574,13 +587,13 @@ p {
 }
 
 .contact-desc {
-  width: 245px;
-  height: 42px;
-  font-family: Satoshi;
-  color: var(--primary-color);
+  width: 242.5px;
+  height: 40px;
   font-size: 16px;
   border-radius: 62px;
   padding: 2px 52px;
+  text-align: center;
+  border: var(--search-border);
 }
 
 .footer-th {
