--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -544,14 +544,14 @@ p {
 /* FOOTER */
 
 .footer {
-  height: 620px;
+  height: 550px;
   margin-top: 82px;
   background-color: var(--secondary-color);
 }
 
 .footer-legend {
   width: 1240px;
-  height: 180px;
+  height: 90px;
   background-color: var(--primary-color);
   margin-left: 100px;
   margin-right: 100px;
@@ -559,6 +559,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 36px 64px 36px 64px;
 }
 
 .fiveth-title {
@@ -567,9 +568,8 @@ p {
   font-style: normal;
   font-weight: 700;
   line-height: 45px;
-  width: 550px;
-  height: 90px;
-  padding: 36px 64px 36px 64px;
+  width: 551px;
+  height: 94px;
 }
 
 .contact-email {
@@ -591,7 +591,7 @@ p {
   height: 40px;
   font-size: 16px;
   border-radius: 62px;
-  padding: 2px 52px;
+  padding: 2px 53.5px;
   text-align: center;
   border: var(--search-border);
 }
@@ -600,6 +600,13 @@ p {
   padding-top: 50px;
   text-align: left;
   margin-bottom: 25px;
+}
+
+.footer-contact {
+  position: absolute;
+  margin-left: 990px;
+  margin-top: -135px;
+
 }
 
 .footer-desc {
@@ -622,7 +629,7 @@ p {
   font-size: 33.455px;
   font-weight: 700;
   position: absolute;
-  margin-top: -35px;
+  margin-top: -48px;
 }
 
 .list-item {
@@ -641,8 +648,8 @@ p {
 .item-secondary {
   width: 248px;
   color: var(--fiveth-color);
-  margin-bottom: 51px;
-  margin-top: 25px;
+  margin-bottom: 35px;
+  margin-top: 26px;
 }
 
 .footer-copyright {
@@ -662,4 +669,48 @@ p {
   width: 46px;
   height: 30px;
   margin-right: 12px;
+}
+
+#social {
+  position: relative;
+  margin-bottom: 54px;
+}
+
+.social-item {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: absolute;
+  top: 0;
+  height: 28px;
+  display: block;
+}
+
+.social-link {
+  display: block;
+  height: 44px;
+}
+
+#twitter {
+  left: 0px;
+  width: 30px;
+  background: url('../assets/images/social.svg') 0 0;
+}
+
+#fb {
+  left: 40px;
+  width: 30px;
+  background: url('../assets/images/social.svg') -40px 0;
+}
+
+#instagram {
+  left: 80px;
+  width: 30px;
+  background: url('../assets/images/social.svg') -80px 0;
+}
+
+#github {
+  left: 120px;
+  width: 28px;
+  background: url('../assets/images/social.svg') -120px 0;
 }
