--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -132,11 +132,10 @@ p {
 /* SECTION HEADER  */
 
 .nav-bar {
-  display: block;
   height: 48px;
-  align-items: center;
-  margin-top: 22px;
-  margin-bottom: 22px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
 }
 
 .nav-logo {
@@ -149,9 +148,16 @@ p {
   margin-right: 40px;
 }
 
-.nav-item-link {
-  color: var(--fiveth-color);
+.nav {
+  margin-left: 200px;
+  width: 1037px;
+  margin-top: -37px;
+}
+
+.nav-link:hover {
+  color: var(--primary-color);
   text-decoration: none;
+  text-decoration: underline;
 }
 
 .nav-item-link:hover {
@@ -169,10 +175,10 @@ p {
 }
 
 .nav-search {
-  width: 440px;
+  width: 470px;
   height: 44px;
-  margin-left: 16px;
-  margin-right: 16px;
+  margin-left: 45px;
+  margin-right: 0px;
   border-radius: 62px;
   background-image: url("../assets/images/search.svg");
   background-repeat: no-repeat;
@@ -234,7 +240,7 @@ p {
 
 .btn-primary {
   position: absolute;
-  top: 507px;
+  top: 520px;
   background-color: var(--primary-color);
   color: var(--text-color);
   cursor: pointer;
@@ -245,10 +251,17 @@ p {
   color: var(--primary-color);
 }
 
+.line-primary {
+    margin-left: 175px;
+    color: var(--inline-color);
+    margin-top: -100px;
+}
+
 .tbl {
   position: absolute;
-  top: 607px;
+  top: 570px;
   margin-top: 48px;
+  padding-top: 25px;
   width: 596px;
   height: 74px;
   display: flex;
@@ -660,6 +673,11 @@ p {
   color: var(--fiveth-color);
   margin-bottom: 35px;
   margin-top: 72px;
+}
+
+.nav-item-link {
+  color: var(--fiveth-color);
+  text-decoration: none;
 }
 
 .footer-copyright {
