--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -80,7 +80,9 @@ p {
   margin: 1px 1px 1px 1px;
 }
 
-
+input[type=text]:focus {
+  border: none solid var(--search-border) ;
+}
 
 
 
@@ -161,7 +163,7 @@ p {
 }
 
 .nav-item-link:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 .nav-item {
@@ -188,6 +190,7 @@ p {
   margin-left: 0px;
   border: var(--search-border);
   background-color: var(--secondary-color);
+  border: none;
 }
 
 .nav-icon {
@@ -252,9 +255,9 @@ p {
 }
 
 .line-primary {
-    margin-left: 175px;
-    color: var(--inline-color);
-    margin-top: -100px;
+  margin-left: 175px;
+  color: var(--inline-color);
+  margin-top: -100px;
 }
 
 .tbl {
@@ -607,14 +610,19 @@ p {
   margin-bottom: 14px;
 }
 
-.contact-desc {
-  width: 242.5px;
+.btn-contact {
+  width: 349px;
   height: 40px;
   font-size: 16px;
   border-radius: 62px;
   padding: 2px 53.5px;
   text-align: center;
   border: var(--search-border);
+}
+
+.btn-contact:hover {
+  background-color: var(--btn-primary);
+  color: var(--primary-color);
 }
 
 .footer-th {
