--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -1,4 +1,6 @@
-/* LINK */
+/*------------------------------------*\
+  #LINK
+\*------------------------------------*/
 
 @import url("../css/reset.css");
 @import url('https://fonts.cdnfonts.com/css/satoshi');
@@ -23,7 +25,9 @@
 
 
 
-/*  DEFINE COLOR VARIABLE */
+/*------------------------------------*\
+  #DEFINE COLOR VARIABLE
+\*------------------------------------*/
 
 :root {
   --primary-color: black;
@@ -43,7 +47,9 @@
 
 
 
-/* COMPONENTS */
+/*------------------------------------*\
+  # COMPONENTS
+\*------------------------------------*/
 
 body {
   width: 1440px;
@@ -86,7 +92,9 @@ input[type=text]:focus {
 
 
 
-/* SECTION SIGN UP */
+/*------------------------------------*\
+  #SECTION SIGN UP
+\*------------------------------------*/
 
 .sign-up {
   height: 38px;
@@ -131,7 +139,9 @@ input[type=text]:focus {
 
 
 
-/* SECTION HEADER  */
+/*------------------------------------*\
+  #SECTION HEADER
+\*------------------------------------*/
 
 .nav-bar {
   height: 48px;
@@ -148,6 +158,7 @@ input[type=text]:focus {
   font-weight: 700;
   line-height: normal;
   margin-right: 40px;
+
 }
 
 .nav {
@@ -190,7 +201,6 @@ input[type=text]:focus {
   margin-left: 0px;
   border: var(--search-border);
   background-color: var(--secondary-color);
-  border: none;
 }
 
 .nav-icon {
@@ -212,7 +222,9 @@ input[type=text]:focus {
 
 
 
-/* SECTION BANNER  */
+/*------------------------------------*\
+  #SECTION BANNER
+\*------------------------------------*/
 
 .banner-section {
   background-image: url("../assets/images/rectangle.png");
@@ -306,7 +318,9 @@ input[type=text]:focus {
 
 
 
-/* SECTION BRAND */
+/*------------------------------------*\
+  #SECTION BRAND
+\*------------------------------------*/
 
 .brand-section {
   height: 122px;
@@ -328,7 +342,9 @@ input[type=text]:focus {
 
 
 
-/* SECTION ARRIVAL */
+/*------------------------------------*\
+  #SECTION ARRIVAL
+\*------------------------------------*/
 
 .arrival-section {
   height: 650px;
@@ -350,6 +366,11 @@ input[type=text]:focus {
   width: 280px;
   height: 444px;
   padding: 10px;
+}
+
+.product-item:hover {
+  color: var(--primary-color);
+  cursor: pointer;
 }
 
 .product-img {
@@ -429,7 +450,9 @@ input[type=text]:focus {
 
 
 
-/* TOP SELLING SECTION*/
+/*------------------------------------*\
+  #TOP SELLING SECTION
+\*------------------------------------*/
 
 .topsell-section {
   height: 621px;
@@ -471,11 +494,21 @@ input[type=text]:focus {
   padding: 5px;
 }
 
+.browes-img:hover {
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
 .desc {
   position: absolute;
   font-size: 36px;
   font-weight: 700;
   display: block;
+}
+
+.desc:hover {
+  color: var(--primary-color);
+  cursor: pointer;
 }
 
 .top-left {
@@ -502,7 +535,9 @@ input[type=text]:focus {
 
 
 
-/* SECTION OUR HAPPY CUSTOMERS */
+/*------------------------------------*\
+  #SECTION OUR HAPPY CUSTOMERS
+\*------------------------------------*/
 
 .customer {
   height: 400px;
@@ -565,7 +600,9 @@ input[type=text]:focus {
 
 
 
-/* FOOTER */
+/*------------------------------------*\
+  #FOOTER
+\*------------------------------------*/
 
 .footer {
   height: 600px;
