--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -84,7 +84,7 @@ p {
 }
 
 input[type=text]:focus {
-  border: none none var(--btn-secondary) ;
+  border: none none var(--btn-secondary);
 }
 
 
@@ -556,7 +556,7 @@ input[type=text]:focus {
   width: 333px;
   height: 200px;
   border-radius: 20px;
-  border: 1px solid var(--inline-color);
+  border: 1px solid var(--secondary-color);
 }
 
 .customer-desc {
